<resources>
    <string name="app_name">Arrived</string>
    <string name="AboutUs">Arrived is a William McLaughlin project.
        \n\nFor more information, including ways to contact us to provide feedback, you can visit <a href="http://www.arrived.us">our website</a>.
        \n\n\"When we arrive, sons and daughters, we\'ll make our homes on the water...\"</string>
    <string name="copyright" translatable="false">© 2016</string>
    <string name="learnButton">Learn</string>
    <string name="seeButton">See</string>
    <string name="homepageMenu2">Visa Help</string>
    <string name="homepageMenu3">Housing</string>
    <string name="homepageMenu4">Job Assistance</string>
    <string name="homepageMenu5">Legal Help</string>
    <string name="homepageMenu6">Deportation Help</string>
    <string name="homepageMenu7">Education</string>
    <string name="homepageMenu8">Support Groups</string>
    <string name="homepageMenu9">FAQ</string>
    <string name="visaHelpQuestion1">What is a visa?</string>
    <string name="visaHelpAnswer1">
        A visa is a document that lets you travel to, live in, or work in a country. In the US, there are two types of visas—immigrant and non-immigrant—that serve different purposes.        \nThe Department of State is responsible for deciding who receives visas. You can apply for both types of visas at US embassies around the world.\n
        &#8226;Immigrant Visas: People wishing to immigrate to the United States.\n
        &#8226;Non-Immigrant visas: People wishing to visit for business or tourism, study at a school or university, or receive medical treatment in the US.
    </string>
    <string name="visaHelpQuestion2">Do I need a visa?</string>
    <string name="visaHelpAnswer2">
        US law requires you to have some form of documentation if you are in the country. If you do not have a visa or if you have overstayed your visa, you are considered an illegal alien. Illegal aliens cannot vote, receive benefits, or hold American passports. If you are an illegal alien, however, and you do not commit a crime, authorities will not know you are here illegally.
    </string>
    <string name="visaHelpQuestion3">What are the penalties for overstaying a visa or entering the country illegally?</string>
    <string name="visaHelpAnswer3">
        If you enter the US without passing through a border control post or if you provide false documents, you can face six months to two years in prison. If you are caught while crossing the border, you may go to an immigration detention center. You will then face an Immigration Court that will decide whether to deport you. If you are deported, it may hurt your chances of receiving a visa in the future.
    </string>
    <string name="visaHelpQuestion4">How can I receive a green card?</string>
    <string name="visaHelpAnswer4">
        You must be here legally to receive a green card. If you are here illegally, that means you must secure a visa through your family, employer, military service, or university. Once you have a visa, you may begin the green card application process. It is difficult if not impossible to obtain a green card without legal status.
    </string>
    <string name="visaHelpQuestion5">How can I secure a green card through my family?</string>
    <string name="visaHelpAnswer5">
        If you have an American relative, you may be able to receive a visa. If you have an immediate relative in the US, you can apply for a visa and receive special priority. In particular, spouses of permanent residents, unmarried children under the age of 21, and parents of the permanent resident may “skip the line” for a visa.
    </string>
    <string name="visaHelpQuestion6">How can I receive a green card through marriage?</string>
    <string name="visaHelpAnswer6">
        If your spouse is an American, he or she can file for you to receive a green card and you will receive the visa immediately if you are eligible. You must marry within 90 days of entering the US and you and your fiancé are both eligible to marry each other.
    </string>
    <string name="visaHelpQuestion7">How can I receive a visa through my employer?</string>
    <string name="visaHelpAnswer7">
        If an employer has a high-skilled job that the US government decides it cannot fill with American workers, it may allow the employer to sponsor your visa. These high-skilled jobs must not displace an American worker, and the number of slots is capped.
    </string>
    <string name="visaHelpQuestion8">How can I receive a visa through my school?</string>
    <string name="visaHelpAnswer8">
        There are two types of visas for students: F-1 and M-1. You must be enrolled full-time in a language, vocational, or educational program approved by the USCIS. Importantly, you must be able to support yourself and intend to return home after your studies end.
    </string>
    <string name="visaHelpQuestion9">How can I receive a visa for military service?</string>
    <string name="visaHelpAnswer9">
        Those who honorably serve in the US Armed Services can apply for citizenship provided that they are at least 18 years old; can read, write, and speak English; and have lived in the US for five years and in the US for at least 30 months out of the past five years before the time of the application.
    </string>
    <string name="visaHelpQuestion10">How can I apply for refugee status?</string>
    <string name="visaHelpAnswer10">
        If you are admitted to the US as a refugee or asylum seeker, you can apply for refugee status one year after arrival.
    </string>
    <string name="visaHelpQuestion11">How can I become a US citizen?</string>
    <string name="visaHelpAnswer11">
        The process of becoming a citizen is called naturalization.
        \nFive years after arrival, if you demonstrate knowledge of the English language and US history and government, you can obtain citizenship. If you marry an American, this waiting period is shortened to three years as long as you have been married for three years.
        \nThe advantages of citizenship over permanent residency include assisting relatives immigrate to the US and voting in elections.
    </string>
    <string name="visaHelpQuestion12">How can I avoid visa scams?</string>
    <string name="visaHelpAnswer12">
        \n1)	Ask questions
        \n2)	Ask for documentation showing the person is licensed or bonded
        \n3)	Demand a written contract for immigration services
        \n4)	Get copies of the papers prepared for you
        \n5)	Get a receipt with amount paid, the date, and name and address of person or business
        \n6)	Get a second opinion
        \n7)	Make sure the immigration consultant or immigration attorney signs your forms as the preparer
        \nAttention! You should never
        \n1)	Trust an immigration consultant or public notary just because a friend invites you to meet them
        \n2)	Pay for entire services before signing a contract or before work is complete
        \n3)	Sign blank application papers
        \n4)	Sign papers, immigration forms, or contracts that you do not fully understand
        \n5)	Let anyone keep your original documents
        \n6)	Pay for government application forms. Form are free and can be downloaded via <a href="www.uscis.gov/forms">this page</a>.
    </string>
    <string name="visaHelpQuestion13">What is the difference between an immigration consultant and lawyer?</string>
    <string name="visaHelpAnswer13">
        A consultant is not the same as a lawyer. A consultant undergoes a background check and pays a fee to become licensed. He or she can answer questions on immigration forms, provide copies, submit forms, and translate questions and answers. They cannot get you visas or work permits immediately or influence government officials.
        \nA lawyer, on the other hand, can provide legal advice, advise which forms you will need, assist with your immigration case, and represent you in court.
    </string>
    <string name="visaHelpAnswer14">A consulate is an office of one nation located in the country of another. For example, at the Mexican consulate in San Francisco, diplomats work to represent Mexicans living in the US with paperwork, advice, and even legal visitation if they are arrested. The grounds of a consulate do not belong to the host country. So the Mexican consulate in San Francisco is part of Mexico—not the United States. A Consul General is the head of the office. Consulates can be found in major cities of a country, but typically not the capital of a country.  \n\n An embassy, on the other hand, is located in the capital of a country. An ambassador oversees the office. It performs many of the same duties as the consulate but on a larger scale.</string>
    <string name="visaHelpQuestion14">What are consulate and an embassy?</string>
    <string name="homepageMenu12">Driving</string>
    <string name="homepageMenu14">Health Knowledge</string>
    <string name="homepageMenu15">Financial Advice</string>
    <string name="financialQuestion1">How can I open a bank account?</string>
    <string name="financialAnswer1">Many banks in the US let you open a bank account for free. There are two types of accounts: checking and savings. A checking account gives the account holder a book of checks that some businesses accept instead of cash. These accounts do not earn interest. A savings account, on the other hand, will give you a debit card and allow you to earn a small interest rate. The main banks in the US are Bank of America, Chase, Wells Fargo, TD Bank, and Citi Bank.</string>
    <string name="financialQuestion2">How can I sign up for a credit card?</string>
    <string name="financialAnswer2">You need a credit score to sign up for a credit card. A credit score is a rating that predicts how likely you are to repay your debts. A high credit score is 850 and 200 is a low credit score. You can start a credit score by applying for a secured credit card. If you make payments each month and do not spend over the limit, your credit score will increase over time.</string>
    <string name="financialQuestion3">I need to file for taxes. How can I pay them?</string>
    <string name="financialAnswer3">Many individuals qualify for free tax preparation from <a href="http://www.turbotax.com">TurboTax</a>is a software program that calculates how much you owe in federal and state taxes if applicable. Typically, Americans pay taxes every April. If you earn less than $100,000 and you have standard deductions, you can file for free with the <a href="https://turbotax.intuit.com/personal-taxes/online/free-edition.jsp">TurboTax Federal Free Edition</a>.</string>
    <string name="financialQuestion4">What is a loan shark and how do I avoid them?</string>
    <string name="financialAnswer4">A loan shark offers short-term loans at high interest rates. In the US, these lenders are also known as payday lending companies. Many states have set maximum interest rates that you can offer for a loan (typically below 50%). Several states have rules that limit the number of rollovers allowed. So if you live in Texas, the payday lender cannot rollover the debt into the next period (and increase the total amount owed).</string>
    <string name="financialQuestion5">How can I track my income and expenses with an app or online?</string>
    <string name="financialAnswer5">Several apps can track your income and expenses. <a href="http://www.mint.com">Mint</a> is a popular website and app that is free to use. <a href="https://play.google.com/store/apps/details?id=com.dayspringtech.envelopes">GoodBudget</a> is another app for Android and iOS that lets you set a budget and measure your performance. <a href="https://play.google.com/store/apps/details?id=com.blodhgard.easybudget">Fast Budget</a> is an app that merges your credit card spending with your bank account activity.</string>
</resources>