<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="us.arrived.arrived.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/footer"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/secondMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/visa_icon"
                android:text="@string/homepageMenu2"
                />

            <Button
                android:id="@+id/thirdMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/housing_icon"
                android:text="@string/homepageMenu3"
                />

            <Button
                android:id="@+id/fourthMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/career_icon"
                android:text="@string/homepageMenu4"
                />

            <Button
                android:id="@+id/fifthMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/legal_icon"
                android:text="@string/homepageMenu5"
                />

            <Button
                android:id="@+id/sixthMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/deportation_help"
                android:text="@string/homepageMenu6"
                />

            <Button
                android:id="@+id/seventhMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/education_icon"
                android:text="@string/homepageMenu7"
                />

            <Button
                android:id="@+id/eighthMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/support_icon"
                android:text="@string/homepageMenu8"
                />

            <Button
                android:id="@+id/tenthMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/health_icon"
                android:text="@string/homepageMenu14"
                />

            <Button
                android:id="@+id/eleventhMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/financial_icon"
                android:text="@string/homepageMenu15"
                />

            <Button
                android:id="@+id/twelfthMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/driving_icon"
                android:text="@string/homepageMenu12"
                />

            <Button
                android:id="@+id/ninthMenuButton"
                style="@style/main_menu_buttons"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/faq_icon"
                android:text="@string/homepageMenu9"
                />

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/facebook_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@color/black"
            android:drawableLeft="@mipmap/fb_logo"
            android:drawableStart="@mipmap/fb_logo"
            />

        <!-- TO DO: Figure out how to display the copyright notice. Not a huge deal.
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/copyright_notice"
                        android:text="@string/copyright"
                        android:textSize="8sp"
                        android:textColor="#FFFFFF"
                        android:clickable="false"
                        android:layout_centerInParent="true"
                        android:layout_below="@+id/arrived_button"
                        /> -->

        <Button
            android:id="@+id/arrived_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/black"
            android:drawableLeft="@mipmap/arrived_footer_logo"
            android:drawableStart="@mipmap/arrived_footer_logo"
            />


        <Button
            android:id="@+id/twitter_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/black"
            android:drawableLeft="@mipmap/twitter_logo"
            android:drawableStart="@mipmap/twitter_logo"
            />
    </RelativeLayout>
</RelativeLayout>